<resources>
    <string name="app_name">Popular Movies</string>


    <string name="default_max_date">2019-01-01</string>
    <string name="default_min_date">1910-01-01</string>
    <string name="default_min_votes">10</string>
    <string name="default_adult">false</string>
    <string name="default_video">true</string>
    <string name="date_time_format">yyyy-MM-dd</string>
    <string name="message_loading">loading</string>
    <string name="message_poster">Movie Poster</string>
    <string name="message_trailer">Movie Trailer</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">moviemanager.virtual4real.com</string>
    <string name="content_authority">com.virtual4real.moviemanager.app</string>


    <string name="api_url">"http://api.themoviedb.org/3"</string>
    <string name="youtube_image_url">"http://img.youtube.com/vi/"</string>
    <string name="youtube_image_name">"/1.jpg"</string>
    <string name="youtube_video_url">"http://www.youtube.com/watch?v="</string>
    <string name="youtube_intent_url">"vnd.youtube:"</string>

    <string name="sort_key">MEMORY_SORT</string>
    <string name="order_key">MEMORY_ORDER</string>
    <string name="image_base_key">IMAGE_BASE_URL</string>
    <string name="backdrop_base_key">BACKDROP_BASE_URL</string>

    <string name="sort_asc">asc</string>
    <string name="sort_desc">desc</string>

    <string name="order_popular">popularity</string>
    <string name="order_release">release_date</string>
    <string name="order_rated">vote_average</string>
    <string name="order_favorite">favorite</string>


    <string name="card_view_image_ratio">1.5</string>

    <string name="credits_text">Images from <a href="https://icons8.com/">Icons8</a></string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">Search movies</string>

    <!-- General settings -->
    <string name="search_start_key">SEARCH_START_DATE</string>
    <string name="pref_search_start_date_label">Movies released after</string>

    <string name="search_end_key">SEARCH_END_DATE</string>
    <string name="pref_search_end_date_label">Movies released before</string>

    <string name="search_min_vote_key">SEARCH_MIN_VOTE</string>
    <string name="search_min_vote_label">Minimum number of votes</string>

    <string name="search_adult_key">SEARCH_IS_ADULT</string>
    <string name="search_adult_title">Adult movies</string>
    <string name="search_adult_label">Include adult movies or not</string>

    <string name="search_video_key">SEARCH_IS_VIDEO</string>
    <string name="search_video_title">Videos</string>
    <string name="search_video_label">Include videos or not</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="title_overview">Overview</string>
    <string name="title_trailers">Trailers</string>
    <string name="title_reviews">Reviews</string>


    <string name="menu_share">Share</string>
    <string name="menu_orderby">OrderBy</string>
    <string name="menu_popularity">popularity</string>
    <string name="menu_vote">vote</string>
    <string name="menu_favorite">favorite</string>
    <string name="menu_release_date">release date</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>


    <string name="collapsing_one_pane_scroll">scroll|exitUntilCollapsed</string>
    <string name="collapsing_two_pane_scroll">scroll</string>

</resources>
