<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true"
        android:layout_marginTop="@dimen/detail_scroll_top"
        android:layout_marginLeft="@dimen/detail_backdrop_space"
        android:layout_marginRight="@dimen/detail_backdrop_space">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/DetailCollapsingToolbar">

            <ImageView
                android:id="@+id/img_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/DetailToolbarImage" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/DetailToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/detail_padding_thumbnail">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="@dimen/detail_scroll_top"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_thumbnail_detail"
                            android:layout_width="133dp"
                            android:layout_height="200dp"
                            style="@style/DetailThumbnailImage" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_height="fill_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/detail_margin_title"
                        android:orientation="vertical"
                        android:layout_gravity="right"
                        android:gravity="right">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/DetailTitle" />

                        <TextView
                            android:id="@+id/original_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/OriginalTitle" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/detail_rating_space"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal">

                            <RatingBar
                                android:id="@+id/rating_bar_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/movieRatingBar"
                                android:numStars="5"
                                android:stepSize="0.5"
                                android:layout_marginRight="2dp"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:id="@+id/movie_rating_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/detail_rating_text_space"
                                android:layout_gravity="center_horizontal" />


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/detail_date_margin_top"
                            android:layout_marginRight="@dimen/detail_date_margin_right"
                            android:gravity="bottom|right"
                            android:layout_gravity="bottom|right">


                            <TextView
                                android:id="@+id/release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/DetailDate" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailCard">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_card_header"
                        style="@style/DetailCardHeader">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/DetailCardHeaderTitle"
                            android:text="@string/title_overview" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.CardContent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/DetailCardHeaderText"
                            android:id="@+id/overview" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardTrailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailCard">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_card_header"
                        style="@style/DetailCardHeader">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/DetailCardHeaderTitle"
                            android:text="@string/title_trailers" />
                    </LinearLayout>


                    <GridLayout
                        android:id="@+id/trailer_layout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/detail_card_margin">

                    </GridLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailCard">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_card_header"
                        style="@style/DetailCardHeader">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/DetailCardHeaderTitle"
                            android:text="@string/title_reviews" />
                    </LinearLayout>


                    <GridLayout
                        android:id="@+id/review_layout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.CardContent">

                    </GridLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/fab_container"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginRight="@dimen/detail_fab_margin">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/set_fav"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/like"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            app:layout_collapseMode="parallax" />
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>



